lawlib/fixtures/invalid/import_cycle_a.dsl
law ImportCycleA
authority private
enacted 2025-01-01

import "import_cycle_b.dsl"
